additional auctionmark seed data